--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,23 +1,27 @@
-name: Generate Snake
+name: generate animation
 
 on:
-  schedule:
-    - cron: "0 0 * * *" # Runs once daily at midnight
-  workflow_dispatch:
+  schedule: # run automatically every 24 hours
+    - cron: "0 0 * * *"
+  workflow_dispatch: # run manually when triggered
+  push: # run on every push to main
+    branches:
+      - main
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@master
+      - name: Generate Snake
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: singh-jii-07e
           outputs: dist/snake.svg
 
-      - name: Push to GitHub
-        uses: EndBug/add-and-commit@v9
+      - name: Push Snake to output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          author_name: github-actions
-          author_email: github-actions@github.com
-          message: "Generated Snake Game"
-          add: dist/snake.svg
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
